# vpm

./: .gitignore  Cargo.toml  README.md  justfile
src/: fish.rs  main.rs  shells.rs  tui.rs
