[package]
name = "vector-project-manager"
version = "0.1.0"
authors = ["Victor Hornet"]
license = "MIT"
edition = "2021"
repository = "https://github.com/victorhornet/vpm"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
clap = { version = "4.1.8", features = ["derive"] }
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }

[[bin]]
name = "vpm"
path = "src/main.rs"
