[package]
name = "vector-project-manager"
version = "0.1.4"
authors = ["Victor Hornet"]
license = "MIT"
edition = "2021"
repository = "https://github.com/victorhornet/vpm"
description = "Project folder manager."
readme = "README.md"

[dependencies]

chrono = "0.4.26"
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
itertools = "0.12.0"
ratatui = { version = "0.25.0", features = ["all-widgets"] }

[[bin]]
name = "vpm"
path = "src/main.rs"
